Repair Unit Test